2017-04-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (open_socket), nasl/lint.c (nasl_lint_def)
	(nasl_lint_call), nasl/nasl_grammar.y (mylex), nasl/nasl_var.c
	(get_array_elem, nasl_read_var_ref): Use fallthrough comment to fix
	GCC 7 warnings.

2017-04-24  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* INSTALL: Change libssh version dependency. Now list 0.6 instead
	of 0.5.

	* nasl/CMakeLists.txt: Check for libssh version 0.6 instead of 0.5.

	* nasl/nasl_init.c (libfuncs): Remove version check for libssh.
	(libivars): Remove _HAVE_LI_BSSH variable and related comments.

2017-04-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/attack.c (attack_start, launch_plugin): Use consistent
	hostname (ip) logging. Add fqdn to the messages.

2017-04-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/lint.c (list_t): Remove typedef.
	(nasl_lint_call): Remove dont_check_list argument. Handle CONST_STR
	case. Add defined_func() argument to declared functions.
	(nasl_lint): Adjust nasl_lint_call() call.

2017-04-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c: New typedef list_t.
	(stringcompare): Check if the list data is null.
	(nasl_lint_call): Add new argument to the function, since the list
	variable is not global.
	(nasl_lint): Do deep copy of lexic. dont_check_list is type list_t.
	After to free the list, it point tu null. Use free_lex_ctxt() to free
	lexic_aux.

2017-04-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_display): Fix off-by-one allocation.

2017-04-11  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c: New GSList dont_check_list.
	(stringcompare): New Function.
	(nasl_lint_call): Add case CONST_DATA to create a list of functions
	checked with the nasl function defined_func(). Listed function will
	not be checked by lint.
	(nasl_lint): New variable defined_flag.

2017-04-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>
